# farmtool

./: .gitignore  main.py  main.pyproject  pyproject.toml
config/: ConfigFarm.py  config_farm.py
controller/: farm.py
data/: settings.csv
data/examples/: ex_group.csv
db/: export.py  farm_db.py
docs/: howto
farm_tool/config/: config_farm.py
farm_tool/controller/: farm.py
farm_tool/model/: exporter.py  farm_db.py  table_model.py
farm_tool/ui/: animal_widget.py  create_farm_dialog.py  expense_widget.py  group_widget.py  help_widget.py  main_menu.py  main_window.py  report_widget.py  schedule_widget.py  supply_widget.py
farmtool/: main.py
farmtool/controller/: farm.py
farmtool/model/: exporter.py  farm_db.py  table_model.py
farmtool/ui/: animal_widget.py  expense_widget.py  main_menu.py  main_window.py  report_widget.py  schedule_widget.py  supply_widget.py
model/: data_model.py  exporter.py  farm_db.py  farm_model.py  list_model.py  model.py  pandas_model.py
ui/: AnimalWidget.py  Config.py  CreateFarmDialog.py  ExpenseWidget.py  GroupWidget.py  HelpWidget.py  MainMenu.py  MainWidget.py  MainWindow.py  ScheduleWidget.py  SupplyWidget.py  animal_widget.py  create_group_dialog.py  expense_widget.py  farm_tool.py  group_widget.py  help_widget.py  main_menu.py  main_window.py  pandas_model.py  schedule_widget.py  supply_widget.py
