[project]
name = "farmtool"
description = "farmtool example package"
version = "0.1"
authors = [{name="Charlotte Wolf"}]
dependencies = [
	"pyside6",
	"sqlalchemy",
	"pandas",
	"lxml",
]
[tool.setuptools.packages.find]
include = ["farmtool*"]
[project.scripts]
farmtool = "farmtool.main:run"
[build-system]
requires = ["setuptools"]
